<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleReceptActivity">

    <TextView
        android:id="@+id/nazivJela"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/switcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewSwitcher
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/emptyStar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/nijeFavorit"/>

        <ImageView
            android:id="@+id/favoritStar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_star"
            android:contentDescription="@string/jeFavorit"/>

    </ViewSwitcher>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintOcjena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nazivJela"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvProsjekOcjena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvOcjena"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/prosjekOcjena"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvOcjena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvProsjekOcjena"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/nedostupnaOcjena"
            android:textColor="@color/colorBlack"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSastojak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintOcjena"
        app:layout_constraintBottom_toTopOf="@+id/constraintKorak">
        <TextView
            android:id="@+id/sastojci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/sastojci"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSastojci"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/sastojci"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:background="@drawable/border"
            android:scrollbars="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintKorak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintSastojak"
        app:layout_constraintBottom_toTopOf="@+id/linLayDijeli">
        <TextView
            android:id="@+id/koraci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/koraci"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvKoraci"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/koraci"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:background="@drawable/border"
            android:scrollbars="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linLayDijeli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/btn_save"
        android:elevation="5dp">
        <TextView
            android:id="@+id/tvDijeli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dijeli"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/ikonaDijeli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayOcijeni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/linLayDijeli"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/btn_save"
        android:elevation="5dp">
        <TextView
            android:id="@+id/tvOcijeni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocijeni"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_border"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>